fixup! squash! Bug 27476: Implement about:torconnect captive portal within Tor Browser
Bug 40881: animated torconnect's progress bar

--- a/browser/components/torconnect/content/aboutTorConnect.css
+++ b/browser/components/torconnect/content/aboutTorConnect.css
@@ -189,6 +189,17 @@ input[type="checkbox"]:not(:disabled):active:checked {
   background-color: var(--purple-80)!important;
 }
 
+:root {
+  --progressbar-shadow-start: rgba(255, 255, 255, 0.85);
+}
+
+@media (prefers-color-scheme: dark)
+{
+  :root {
+    --progressbar-shadow-start: rgba(28, 27, 34, 0.85);
+  }
+}
+
 #progressBackground {
   position:fixed;
   padding:0;
@@ -196,9 +207,25 @@ input[type="checkbox"]:not(:disabled):active:checked {
   top:0;
   left:0;
   width: 0%;
-  height: 7px;
-  background-image: linear-gradient(90deg, rgb(20, 218, 221) 0%, rgb(128, 109, 236) 100%);
+  height: 40px;
+  background-image:
+    linear-gradient(transparent 17.5%, var(--progressbar-shadow-start) 17.5%, var(--in-content-page-background) 100%),
+    linear-gradient(90deg, #FC00FF 0%, #00DBDE 50%, #FC00FF 100%);
+  background-size: 100%, 200%;
   border-radius: 0;
+  animation: progressAnimation 5s ease infinite;
+}
+
+@keyframes progressAnimation {
+  0% {
+    background-position: 200%;
+  }
+  50% {
+    background-position: 100%;
+  }
+  100% {
+    background-position: 0%;
+  }
 }
 
 #connectPageContainer {
